Edit html content in alergy-friendly-choco-chip-cookies.html, fishtacos.html, pear-and-almond-tart.html

--- a/recipes/fishtacos.html
+++ b/recipes/fishtacos.html
@@ -16,7 +16,7 @@
 
             <p>
                 This recipe was originally posted by the author Jennifer Pallian BSc,RD, in the website 
-                <a href="https://foodess.com/spicy-fish-tacos-with-cabbage-slaw-lime-crema/"><em>
+                <a href="https://foodess.com/spicy-fish-tacos-with-cabbage-slaw-lime-crema/" target="_blank"><em>
                 foodess</em></a>. I can personally attest these spicy fish tacos with the fixins are absolutely 
                 <strong>mouth watering</strong> AND my newest <strong>go-to</strong> for fish tacos!          
                 
@@ -80,7 +80,7 @@
 
                 </ul>
         
-        <h3>Instructions</h3>
+        <h3>Directions</h3>
 
             <ol>
 
